# H2-Phase-1-Todo

./: .gitignore  README.md  pyproject.toml  tasks.json  tasks.json.backup
.claude/agents/: hotel-reminder-scheduler.md  hotel-task-manager.md
.claude/skills/: assign-hotel-task.md  bulk-schedule-reminders.md  cancel-hotel-reminder.md  create-hotel-task.md  list-hotel-reminders.md  list-hotel-tasks.md  schedule-hotel-reminder.md  update-hotel-task.md
.specify/memory/: constitution.md
history/prompts/001-console-todo-crud/: 001-generate-dependency-ordered-tasks.tasks.prompt.md  002-implement-console-crud-todo.green.prompt.md
history/prompts/constitution/: 001-evolution-of-todo-constitution.constitution.prompt.md
specs/001-console-todo-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-crud/checklists/: requirements.md
specs/001-console-todo-crud/contracts/: cli-commands.md
specs_history/: add_task.spec.md  complete_task.spec.md  delete_task.spec.md  update_task.spec.md  view_tasks.spec.md
src/: __init__.py  main.py  todo_app.py
src/models/: __init__.py  task.py
